# OCC_examples_semiconductor_device

./: .gitignore  CMakeLists.txt  CONFORMAL_MESH_ANALYSIS.md  CONFORMAL_MESH_README.md  IMPLEMENTATION_SUMMARY.md  PLAN.md  README.md  VERSION_COMPATIBILITY_NOTE.md  WARP.md  build.sh  validate_vtk.py
docs/: IMPLEMENTATION_STATUS.md  design_analysis_and_improvements.md  final_intrusive_device_building_design.md  intrusive_device_building.md
examples/: CMakeLists.txt  advanced_mesh_refinement_example.cpp  basic_shapes_example.cpp  conformal_mesh_example.cpp  extrusion_split_mosfet_example.cpp  fine_conformal_mesh_example.cpp  finfet_extrusion_example.cpp  mosfet_example.cpp  realistic_gate_profile_example.cpp  simple_conformal_demo.cpp  simple_mosfet_example.cpp  trapezoid_nurbs_example.cpp  ultra_fine_mesh_example.cpp
include/: BoundaryMesh.h  DependencyGraph.h  GeometryBuilder.h  GeometryValidator.h  IntersectionCache.h  IntrusiveDeviceBuilder.h  OpenCASCADEHeaders.h  SemiconductorDevice.h  SpatialIndexOCCT.h  TransformValidator.h  VTKExporter.h
proposal/: FRONTEND_INTEGRATION_PLAN.md  MILESTONE0.md  REFINED_ARCHITECTURE.md  SMART_ARCHITECTURE.md
proposal/api_layer/: WebAPIServer.cpp
proposal/backend_extensions/: SemiconductorREPL.h
proposal/frontend/: GeometryViewer.js
proposal/smart_backend/: GeometryEngine.h
proposal/web_api/: WebAPIServer.h
src/: BoundaryMesh.cpp  DependencyGraph.cpp  GeometryBuilder.cpp  GeometryValidator.cpp  IntersectionCache.cpp  IntrusiveDeviceBuilder.cpp  SemiconductorDevice.cpp  SpatialIndexOCCT.cpp  TransformValidator.cpp  VTKExporter.cpp
